--- a/src/main/webapp/admin/index.html
+++ b/src/main/webapp/admin/index.html
@@ -140,7 +140,7 @@
 						</ul>
 					</div>
                     
-                 <iframe id="iframe" style="border:0; width:100%; background-color:#FFF;"  frameborder="0" src="home.html">  </iframe>
+                 <iframe id="iframe" style="border:0; width:100%; background-color:#FFF;"  frameborder="0" src="../home.jsp">  </iframe>
 				 
 
 <!-- /.page-content -->
